fix single timeline on small screen

--- a/css/single-column-timeline.css
+++ b/css/single-column-timeline.css
@@ -125,3 +125,15 @@
 .timeline-body > p + p {
   margin-top: 5px;
 }
+
+
+@media (max-width: 767px) {
+  ul.timeline:before {
+    left: 40px;
+  }
+  ul.timeline > li > .timeline-panel {
+    width: calc(80%);
+    width: -moz-calc(80%);
+    width: -webkit-calc(80%);
+  }
+}
